# harmony-android-guide

./: .gitignore  00-ANALYSIS-PLAN.md  02-ANDROID-AS-ENGINE-CN.md  02-ANDROID-AS-ENGINE.md  02-SHIM-BUILD-PLAN-CN.md  A15_IO_FIX_NEEDED.md  CLAUDE.md  GUIDE.md  README.md  README_CN.md  a2oh-loop.sh  aosp-shim.dex  claude-yang.md
art-build/: Makefile
dalvik-port/: Hello.java  Makefile  README.md  patch_musl_static.py  run-mockdonalds-qemu.sh
database/: analyze_apk.py  apk_analysis_results.json  auto_mapper.py  fix_all.py  fix_compile_errors.py  fix_compile_errors2.py  fix_compile_errors3.py  fix_constructors.py  fix_dedup_and_rest.py  fix_final.py  fix_imports.py  fix_imports2.py  fix_last.py  fix_unknown_types.py  generate_shims.py  import_oh_js.py  import_oh_ndk.py  migrate_schema.sql  schema.sql
docs/: AGENT-A-TASKS.md
frontend/: package-lock.json  package.json  vite.config.ts
ohos-deploy/: aosp-shim.dex  boot-aosp-shim.art  boot-aosp-shim.oat  boot-aosp-shim.vdex  boot-core-icu4j.art  run.sh
orchestrator/: api-shim-pipeline.dot
scripts/: build-shim-dex.sh  check-noice-proof.sh  check-real-mcd-proof.sh  deploy-real-mcd-windows.ps1  generate_per_api_skills.py  run-mcd-profile.sh  run-noice-phone-gate.sh  run-real-mcd-phone-gate.sh  run-yelp-live.sh  sync-westlake-phone-runtime.sh  westlake-dev-http-proxy.py
shim/bridge/rust/: Cargo.toml  build.rs
shim/bridge/rust/src/: device_info.rs  input.rs  lib.rs  logging.rs  navigation.rs  network.rs  notification.rs  oh_ffi.rs  preferences.rs  rdb_store.rs  reminder.rs  result_set.rs  toast.rs  view.rs
(+3122 files in other folders)
