[package]
name = "oh_bridge"
version = "0.1.0"
edition = "2021"
description = "JNI bridge: Java Android shim → OpenHarmony native APIs (Rust)"

[lib]
name = "oh_bridge"
crate-type = ["cdylib"]  # produces liboh_bridge.so for JNI

[dependencies]
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
once_cell = "1"

# OH NDK libraries linked at build time:
# - libhilog_ndk.z.so       (HiLog)
# - libnative_rdb_ndk.z.so  (RdbStore)
# - libdeviceinfo_ndk.z.so  (DeviceInfo)
# - libnet_connection.so     (Net Connection)
# - liboh_cpp_shim.so        (our C++ wrapper for Prefs/Notification/etc.)
#
# Link flags are set in build.rs
